plugins {
    id 'java-library'
    id 'maven-publish'
}

sourceCompatibility = 17
targetCompatibility = 17

group 'dev.goldenstack.loot'
version '1.0'

repositories {
    mavenCentral()
    maven { url 'https://repo.spongepowered.org/maven' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    api 'com.github.Minestom:Minestom:-SNAPSHOT'
    api 'org.jetbrains:annotations:23.0.0'
    api 'com.github.GoldenStack:EnchantmentManager:-SNAPSHOT'
}

publishing {
    publications {
        //noinspection GroovyAssignabilityCheck
        mavenJava(MavenPublication) {
            //noinspection GroovyAssignabilityCheck
            from components.java
        }
    }
}